# veil7

./: .gitignore  .warpfix.yaml  ATTACK_VECTORS.md  CHANGELOG.md  CLAUDE.md  CODE_AUDIT_REPORT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CRYPTO_POLICY.md  Cargo.toml  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  SPEC-HARDENING.md  USE_CASES.md  add_complete_attribution.sh  add_username.sh  math_claims.txt  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: hardening.yml  rust.yml
docs/: ARCHITECTURE_DIAGRAM.md  DEPLOYMENT.md  FAQ.md  FUZZING.md  IAM_RBAC.md  INCIDENT_RESPONSE.md  INTEGRATION_EXAMPLES.md  KEY_INVENTORY.md  L0_LAYER.md  L1_LAYER.md  L2_LAYER.md  L3_LAYER.md  L4_LAYER.md  L5_LAYER.md  L6_LAYER.md  L7_LAYER.md  MONITORING.md  USER_GUIDE.md
fuzz/: Cargo.toml  fuzz_run_72h.sh
fuzz/corpus/fuzz_attest_bytes/: seed_000  seed_002  seed_004
fuzz/corpus/fuzz_batch_verify/: seed_000  seed_001  seed_002
fuzz/corpus/fuzz_blind_attest/: seed_000  seed_002
fuzz/corpus/fuzz_bytecode_builder/: seed_002
fuzz/corpus/fuzz_chain_builder/: seed_000  seed_001
fuzz/corpus/fuzz_chain_root/: seed_000  seed_001  seed_002
fuzz/corpus/fuzz_chain_verify/: seed_000  seed_001  seed_002
fuzz/corpus/fuzz_commit_reveal/: seed_000  seed_001  seed_002
fuzz/corpus/fuzz_dsa_sign_verify/: seed_000  seed_002
fuzz/corpus/fuzz_hash_preimage/: seed_000  seed_003
fuzz/corpus/fuzz_interface_facade/: seed_000  seed_001  seed_002  seed_003  seed_005  seed_006  seed_007
fuzz/corpus/fuzz_keccak_ct/: seed_000
fuzz/corpus/fuzz_kem_roundtrip/: seed_000
fuzz/corpus/fuzz_merkle/: seed_000  seed_001  seed_002  seed_003
fuzz/corpus/fuzz_merkle_verify/: seed_000  seed_002
fuzz/corpus/fuzz_microvm/: seed_000
fuzz/corpus/fuzz_oram/: seed_000  seed_003
fuzz/corpus/fuzz_pedersen/: seed_000  seed_001
fuzz/corpus/fuzz_range_proof/: seed_000
fuzz/corpus/fuzz_shake256/: seed_000
fuzz/corpus/fuzz_shamir/: seed_000
fuzz/corpus/fuzz_threshold/: seed_000  seed_002
fuzz/corpus/fuzz_verify_once/: seed_000
fuzz/corpus/fuzz_verify_once_oram/: seed_000
fuzz/corpus/fuzz_verify_once_vm/: seed_000
fuzz/fuzz_targets/: fuzz_attest_bytes.rs  fuzz_batch_verify.rs  fuzz_blind_attest.rs  fuzz_bytecode_builder.rs  fuzz_chain_builder.rs  fuzz_chain_root.rs  fuzz_chain_verify.rs  fuzz_commit_reveal.rs  fuzz_dsa_sign_verify.rs  fuzz_hash_preimage.rs  fuzz_interface_facade.rs  fuzz_keccak_ct.rs  fuzz_kem_roundtrip.rs  fuzz_merkle.rs  fuzz_merkle_verify.rs  fuzz_microvm.rs  fuzz_oram.rs  fuzz_pedersen.rs  fuzz_range_proof.rs  fuzz_shake256.rs  fuzz_shamir.rs  fuzz_threshold.rs  fuzz_verify_once.rs  fuzz_verify_once_oram.rs  fuzz_verify_once_vm.rs
proofs/: kani_proofs.rs
scripts/: check-hardening.sh  check_ci.py  check_ci_logs.py  generate-sbom.sh  scan-secret-div.py  sign-release.sh
src/: audit.rs  blind.rs  chain.rs  commit_reveal.rs  entropy_health.rs  entropy_sources.rs  hybrid.rs  interface.rs  keccak_ct.rs  lib.rs  main.rs  pipeline.rs  shake256.rs  shamir.rs  threshold.rs
src/common/: domain.rs  error.rs  mod.rs  transcript.rs
src/execution/: mod.rs  vm.rs
src/layers/: l0_memlock.rs  l1_entropy.rs  l2_keygen.rs  l3_commit.rs  l4_prove.rs  l5_verify.rs  l6_zeroise.rs  l7_emit.rs  mod.rs
src/pq_backends/: fn_dsa.rs  libcrux_backend.rs  mod.rs  slh_dsa.rs
src/relations/: hash_preimage.rs  merkle.rs  ml_dsa.rs  mod.rs  pedersen.rs  range_proof.rs  threshold_verify.rs
src/storage/: mod.rs  oram.rs
tests/: adversarial.rs  bench.rs  cavp.rs  fuzz_manual.rs  hardening.rs  new_features.rs  nist_acvp.rs  race_conditions.rs  real_data.rs  stress.rs  stress_comprehensive.rs
