[package]
name = "veil7"
version = "0.1.0"
edition = "2021"
description = "Stateless 7-layer universal post-quantum verification engine. No log, no metadata, no trace, auto-zeroise."
publish = false

[lib]
name = "veil7"
path = "src/lib.rs"

[[bin]]
name = "veil7"
path = "src/main.rs"
required-features = ["std"]

[features]
default = ["std"]
std = ["dep:getrandom"]

[dependencies]
# --- Entropy: OS CSPRNG (pure syscall on Android, no C deps); optional for no_std ---
getrandom = { version = "0.2", optional = true }

# --- Memory locking: mlock/munlock syscalls (already in tree via getrandom) ---
libc = "0.2"

# --- Post-Quantum primitives (formally verified, libcrux) ---
# Phase 1.1: All PQ operations via libcrux (hax/F* verified)
libcrux-ml-kem = { version = "0.0.9", features = ["mlkem768"] }  # ML-KEM-768 (FIPS 203, hax/F* verified)
libcrux-ml-dsa = { version = "0.0.9", features = ["mldsa65"] } # ML-DSA-65  (FIPS 204, hax/F* verified)

# --- PQ signature backend (RustCrypto, awaiting stable release) ---
slh-dsa = { version = "0.2.0-rc.5", default-features = false, features = ["zeroize"] }  # SLH-DSA-SHAKE-128f (FIPS 205)

# --- Hashing / XOF (formally verified, constant-time) ---
libcrux-sha3 = "0.0.9"  # SHAKE256 XOF (libcrux, hax/F* verified, no T-tables)

# --- Memory hygiene + constant-time ---
zeroize = { version = "1", features = ["derive"] }
subtle = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"     # no unwind, no backtrace trace
strip = true        # strip symbols -> no metadata in binary
overflow-checks = true
debug = false
debug-assertions = false

[profile.hardening]
inherits = "release"
strip = false       # keep symbols for CI objdump hardening scans
debug = "line-tables-only"

[profile.dev]
debug = false       # no debuginfo trace even in dev
# no panic="abort" here -- the test harness needs unwind

# ── WASM target ──────────────────────────────────────────────────────────────
# Build for browser/serverless with:
#   cargo build --target wasm32-unknown-unknown --no-default-features
# The no_std build is WASM-compatible. Entropy must be supplied externally
# (e.g. via crypto.getRandomValues() in the browser).
